k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-frontend
  namespace: project1
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  rules:
  - host: vite.nazarf.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vite-frontend
            port:
              number: 80
  tls:
  - hosts:
    - vite.nazarf.dev
    secretName: vite-cert
